# zed-object-tracker

./: README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/zed-object-tracker/lib/zed-object-tracker/: detect
install/zed-object-tracker/share/zed-object-tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
zed_object_tracker/: detect.py
