<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed-object-tracker</name>
  <version>0.0.0</version>
  <description>Multi-Object Tracking using ZED Object Detection Module and ByteTrack</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>zed_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
